fix: update .dockerignore with ** syntax for all files

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,33 +1,33 @@
 # Python
-__pycache__
-*.pyc
-*.pyo
-*.pyd
-.Python
-env
-pip-log.txt
-pip-delete-this-directory.txt
-.tox
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.log
-.git
-.mypy_cache
-.pytest_cache
-.hypothesis
-.env*
+**/__pycache__
+**/*.pyc
+**/*.pyo
+**/*.pyd
+**/.Python
+**/env
+**/pip-log.txt
+**/pip-delete-this-directory.txt
+**/.tox
+**/.coverage
+**/.coverage.*
+**/.cache
+**/nosetests.xml
+**/coverage.xml
+**/*.cover
+**/*.log
+**/.git
+**/.mypy_cache
+**/.pytest_cache
+**/.hypothesis
+**/.env*
 
 # Javascript
 **/node_modules/
 **/dist
-.git
-npm-debug.log
-.coverage
-.coverage.*
-.env
-.aws
+**/.git
+**/npm-debug.log
+**/.coverage
+**/.coverage.*
+**/.env
+**/.aws
 **/build/
