--- a/oc/prod/routes.yaml
+++ b/oc/prod/routes.yaml
@@ -4,10 +4,10 @@ metadata:
   name: dials-backend
   namespace: cms-dials-prod
   labels:
-    app: backend-restapi
-    app.kubernetes.io/component: backend-restapi
-    app.kubernetes.io/instance: backend-restapi
-    app.kubernetes.io/name: backend-restapi
+    app: backend
+    app.kubernetes.io/component: backend
+    app.kubernetes.io/instance: backend
+    app.kubernetes.io/name: backend
     app.kubernetes.io/part-of: dials
     app.openshift.io/runtime-version: latest
   annotations:
@@ -18,7 +18,7 @@ spec:
   host: cmsdials-api.web.cern.ch
   to:
     kind: Service
-    name: backend-restapi
+    name: backend
     weight: 100
   port:
     targetPort: 8000-tcp
