--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ django-debreach = "^2.1.0"
 django-csp = "^3.8"
 django-permissions-policy = "^4.19.0"
 dj-database-url = "^2.1.0"
+django-redis = "^5.4.0"
 python-keycloak = "^3.7.0"
 uvicorn = "^0.27.0.post1"
 gunicorn = "^21.2.0"
