refactor: add sidecar nginx in front of django + gunicorn to serve static files and reverse proxy to dynamic content generated by gunicorn
- Add production setup script to generate static files
- Add production run script to copy staticfiles generated during build time to mountpath where sidecar nginx can read static files
- Improve backend dockerfile to compile all pyc during build time and set python buffered to 1
- Add static root configuration to django settings
- Remove unnecessary check if workspace settings is not empty since this is already done by decouple
- Fix default workspace settings trying to access dictionary keys elements by index
- Add nginx reverse proxy + static config as a config map
- Add nginx container as a sidecar to backend pod exposing port 8081 and remove port 8000 exposition from backend container
-  Remove backend service to gunicorn at port 8000 and add backend-nginx service to nginx at port 8081
- Update backend route to backend-nginx pointing to nginx at port 8081

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -34,6 +34,9 @@ RUN pip3 wheel --no-cache-dir --no-deps --wheel-dir /usr/src/build/wheels -r req
 
 FROM python:3.10.13-alpine3.19 AS release
 
+# This is to print directly to stdout instead of buffering output
+ENV PYTHONUNBUFFERED 1
+
 ARG UID=1000
 ARG GID=1000
 
@@ -58,6 +61,9 @@ RUN chown -R $USERNAME:$USERNAME $APP_HOME
 
 USER $USERNAME
 
+RUN python -m compileall dials
+RUN $APP_HOME/scripts/setup-django-production.sh
+
 EXPOSE 8000
 
-CMD ["python", "-m", "gunicorn", "dials.asgi:application", "-k", "uvicorn.workers.UvicornWorker", "-b", "0.0.0.0:8000"]
+CMD ${APP_HOME}/scripts/run-django-production.sh
