--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,8 @@ psutil = "^5.9.8"
 matplotlib = "^3.8.3"
 ruff = "^0.3.2"
 pyyaml = "^6.0.1"
+uritemplate = "^4.1.1"
+inflection = "^0.5.1"
 
 [tool.poe.tasks]
 start-api = "./backend/scripts/start-dev.sh"
