refactor: update openshift deployment files
- Better organization of deployment resources
- Remove indexers for each workspace deployment
- Add common-indexer deployment
- Add downloader bulk and priority deployments for each primary dataset used by the workspaces

--- a/oc/prod/deployments/etl/common/beat-scheduler.yaml
+++ b/oc/prod/deployments/etl/common/beat-scheduler.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/component: common-redbeat
     app.kubernetes.io/instance: common-redbeat
     app.kubernetes.io/name: common-redbeat
-    app.kubernetes.io/part-of: celery-beats
+    app.kubernetes.io/part-of: common-etl
     app.openshift.io/runtime: redis
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
