--- a/oc/prod/deployments/etl/common/indexer.yaml
+++ b/oc/prod/deployments/etl/common/indexer.yaml
@@ -1,43 +1,47 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: flower
+  name: common-indexer
   namespace: cms-dials-prod
   labels:
-    app: flower
-    app.kubernetes.io/component: flower
-    app.kubernetes.io/instance: flower
-    app.kubernetes.io/name: flower
-    app.kubernetes.io/part-of: celery-monitoring
+    app: common-indexer
+    app.kubernetes.io/component: common-indexer
+    app.kubernetes.io/instance: common-indexer
+    app.kubernetes.io/name: common-indexer
+    app.kubernetes.io/part-of: common-etl
     app.openshift.io/runtime: redis
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: flower
+      app: common-indexer
   template:
     metadata:
       labels:
-        app: flower
-        deployment: flower
+        app: common-indexer
+        deployment: common-indexer
+      annotations:
+        eos.okd.cern.ch/mount-eos-with-credentials-from-secret: eos-credentials
     spec:
       volumes:
         - name: eos-storage
           persistentVolumeClaim:
             claimName: eos-storage
       containers:
-        - name: flower
+        - name: common-indexer
           resources:
             requests:
               memory: 256Mi
             limits:
-              memory: 1024Mi
+              memory: 2048Mi
           command:
             - bash
             - '-c'
             - >-
-              celery --app=python flower
+              celery --app=python worker --loglevel=INFO --concurrency=1
+              --autoscale=1,0 --max-tasks-per-child=1 --hostname=common-indexer@%h
+              --queues=common-indexer
           envFrom:
             - configMapRef:
                 name: dials-etl-configmap
@@ -46,6 +50,10 @@ spec:
             - secretRef:
                 name: eos-credentials
           imagePullPolicy: Always
+          volumeMounts:
+            - name: eos-storage
+              readOnly: true
+              mountPath: /eos
           image: >-
             image-registry.openshift-image-registry.svc:5000/cms-dials-prod/etl:latest
       restartPolicy: Always
