--- a/oc/prod/deployments/etl/downloaders/stream_express.yaml
+++ b/oc/prod/deployments/etl/downloaders/stream_express.yaml
@@ -1,26 +1,26 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: jetmet-indexer
+  name: stream-express-downloader-bulk
   namespace: cms-dials-prod
   labels:
-    app: jetmet-indexer
-    app.kubernetes.io/component: jetmet-indexer
-    app.kubernetes.io/instance: jetmet-indexer
-    app.kubernetes.io/name: jetmet-indexer
-    app.kubernetes.io/part-of: jetmet-etl
+    app: stream-express-downloader-bulk
+    app.kubernetes.io/component: stream-express-downloader-bulk
+    app.kubernetes.io/instance: stream-express-downloader-bulk
+    app.kubernetes.io/name: stream-express-downloader-bulk
+    app.kubernetes.io/part-of: downloader-etl
     app.openshift.io/runtime: redis
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: jetmet-indexer
+      app: stream-express-downloader-bulk
   template:
     metadata:
       labels:
-        app: jetmet-indexer
-        deployment: jetmet-indexer
+        app: stream-express-downloader-bulk
+        deployment: stream-express-downloader-bulk
       annotations:
         eos.okd.cern.ch/mount-eos-with-credentials-from-secret: eos-credentials
     spec:
@@ -29,7 +29,7 @@ spec:
           persistentVolumeClaim:
             claimName: eos-storage
       containers:
-        - name: jetmet-indexer
+        - name: stream-express-downloader-bulk
           resources:
             requests:
               memory: 256Mi
@@ -40,8 +40,8 @@ spec:
             - '-c'
             - >-
               celery --app=python worker --loglevel=INFO --concurrency=1
-              --autoscale=1,0 --max-tasks-per-child=1 --hostname=jetmet-indexer@%h
-              --queues=jetmet-indexer
+              --autoscale=1,0 --max-tasks-per-child=1 --hostname=StreamExpress-downloader-bulk@%h
+              --queues=StreamExpress-downloader-bulk
           envFrom:
             - configMapRef:
                 name: dials-etl-configmap
@@ -72,26 +72,26 @@ spec:
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: jetmet-bulk
+  name: stream-express-downloader-priority
   namespace: cms-dials-prod
   labels:
-    app: jetmet-bulk
-    app.kubernetes.io/component: jetmet-bulk
-    app.kubernetes.io/instance: jetmet-bulk
-    app.kubernetes.io/name: jetmet-bulk
-    app.kubernetes.io/part-of: jetmet-etl
+    app: stream-express-downloader-priority
+    app.kubernetes.io/component: stream-express-downloader-priority
+    app.kubernetes.io/instance: stream-express-downloader-priority
+    app.kubernetes.io/name: stream-express-downloader-priority
+    app.kubernetes.io/part-of: downloader-etl
     app.openshift.io/runtime: redis
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: jetmet-bulk
+      app: stream-express-downloader-priority
   template:
     metadata:
       labels:
-        app: jetmet-bulk
-        deployment: jetmet-bulk
+        app: stream-express-downloader-priority
+        deployment: stream-express-downloader-priority
       annotations:
         eos.okd.cern.ch/mount-eos-with-credentials-from-secret: eos-credentials
     spec:
@@ -100,90 +100,19 @@ spec:
           persistentVolumeClaim:
             claimName: eos-storage
       containers:
-        - name: jetmet-bulk
+        - name: stream-express-downloader-priority
           resources:
             requests:
-              memory: 1024Mi
+              memory: 256Mi
             limits:
-              memory: 5120Mi
+              memory: 1024Mi
           command:
             - bash
             - '-c'
             - >-
               celery --app=python worker --loglevel=INFO --concurrency=1
-              --autoscale=1,0 --max-tasks-per-child=1 --hostname=jetmet-bulk@%h
-              --queues=jetmet-bulk
-          envFrom:
-            - configMapRef:
-                name: dials-etl-configmap
-            - secretRef:
-                name: dials-etl-secrets
-            - secretRef:
-                name: eos-credentials
-          imagePullPolicy: Always
-          volumeMounts:
-            - name: eos-storage
-              readOnly: true
-              mountPath: /eos
-          image: >-
-            image-registry.openshift-image-registry.svc:5000/cms-dials-prod/etl:latest
-      restartPolicy: Always
-      terminationGracePeriodSeconds: 30
-      dnsPolicy: ClusterFirst
-      schedulerName: default-scheduler
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 25%
-      maxSurge: 25%
-  revisionHistoryLimit: 10
-  progressDeadlineSeconds: 600
-
----
-kind: Deployment
-apiVersion: apps/v1
-metadata:
-  name: jetmet-priority
-  namespace: cms-dials-prod
-  labels:
-    app: jetmet-priority
-    app.kubernetes.io/component: jetmet-priority
-    app.kubernetes.io/instance: jetmet-priority
-    app.kubernetes.io/name: jetmet-priority
-    app.kubernetes.io/part-of: jetmet-etl
-    app.openshift.io/runtime: redis
-    app.openshift.io/runtime-namespace: cms-dials-prod
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: jetmet-priority
-  template:
-    metadata:
-      labels:
-        app: jetmet-priority
-        deployment: jetmet-priority
-      annotations:
-        eos.okd.cern.ch/mount-eos-with-credentials-from-secret: eos-credentials
-    spec:
-      volumes:
-        - name: eos-storage
-          persistentVolumeClaim:
-            claimName: eos-storage
-      containers:
-        - name: jetmet-priority
-          resources:
-            requests:
-              memory: 1024Mi
-            limits:
-              memory: 5120Mi
-          command:
-            - bash
-            - '-c'
-            - >-
-              celery --app=python worker --loglevel=INFO --concurrency=1
-              --autoscale=1,0 --max-tasks-per-child=1 --hostname=jetmet-priority@%h
-              --queues=jetmet-priority
+              --autoscale=1,0 --max-tasks-per-child=1 --hostname=StreamExpress-downloader-priority@%h
+              --queues=StreamExpress-downloader-priority
           envFrom:
             - configMapRef:
                 name: dials-etl-configmap
