refactor: update flower deployment to purge offline workers every 120 seconds

--- a/oc/prod/deployments/etl/common/flower.yaml
+++ b/oc/prod/deployments/etl/common/flower.yaml
@@ -37,7 +37,7 @@ spec:
             - bash
             - '-c'
             - >-
-              celery --app=python flower
+              celery --app=python flower --purge_offline_workers=120
           envFrom:
             - configMapRef:
                 name: dials-etl-configmap
