refactor: update cache ttl default value
- Update default CACHE_TTL value to 30 seconds
- Update backend configmap to force DJANGO_CACHE_TTL to 30 seconds and
not rely on CACHE_TTL default value

--- a/oc/prod/configmaps/backend.yaml
+++ b/oc/prod/configmaps/backend.yaml
@@ -6,6 +6,7 @@ metadata:
 data:
   DJANGO_ENV: prod
   DJANGO_DEBUG: '0'
+  DJANGO_CACHE_TTL: 30
   DJANGO_ALLOWED_HOSTS: cmsdials-api.web.cern.ch cmsdials.web.cern.ch
   DJANGO_CSRF_TRUSTED_ORIGINS: https://cmsdials-api.web.cern.ch https://cmsdials.web.cern.ch
   DJANGO_CORS_ALLOWED_ORIGINS: https://cmsdials-api.web.cern.ch https://cmsdials.web.cern.ch
