fix: replace pre-commit hook using yarn lint script with new yarn precommit script
- precommit hook will only run prettier and eslint for staged files
instead of all frontend js/jsx files in the repository

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
     hooks:
       - id: eslint
         name: eslint-local
-        entry: yarn run lint
+        entry: yarn run precommit
         language: system
         types: [javascript]
         exclude: >
