--- a/oc/prod/deployments/etl/workspaces/hcal.yaml
+++ b/oc/prod/deployments/etl/workspaces/hcal.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/instance: hcal-bulk
     app.kubernetes.io/name: hcal-bulk
     app.kubernetes.io/part-of: hcal-etl
-    app.openshift.io/runtime: redis
+    app.openshift.io/runtime: python
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
   replicas: 1
@@ -80,7 +80,7 @@ metadata:
     app.kubernetes.io/instance: hcal-priority
     app.kubernetes.io/name: hcal-priority
     app.kubernetes.io/part-of: hcal-etl
-    app.openshift.io/runtime: redis
+    app.openshift.io/runtime: python
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
   replicas: 1
