--- a/oc/prod/deployments/etl/workspaces/jetmet.yaml
+++ b/oc/prod/deployments/etl/workspaces/jetmet.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/instance: jetmet-bulk
     app.kubernetes.io/name: jetmet-bulk
     app.kubernetes.io/part-of: jetmet-etl
-    app.openshift.io/runtime: redis
+    app.openshift.io/runtime: python
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
   replicas: 1
@@ -80,7 +80,7 @@ metadata:
     app.kubernetes.io/instance: jetmet-priority
     app.kubernetes.io/name: jetmet-priority
     app.kubernetes.io/part-of: jetmet-etl
-    app.openshift.io/runtime: redis
+    app.openshift.io/runtime: python
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
   replicas: 1
