--- a/oc/prod/deployments/etl/workspaces/tracker.yaml
+++ b/oc/prod/deployments/etl/workspaces/tracker.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/instance: tracker-bulk
     app.kubernetes.io/name: tracker-bulk
     app.kubernetes.io/part-of: tracker-etl
-    app.openshift.io/runtime: redis
+    app.openshift.io/runtime: python
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
   replicas: 1
@@ -80,7 +80,7 @@ metadata:
     app.kubernetes.io/instance: tracker-priority
     app.kubernetes.io/name: tracker-priority
     app.kubernetes.io/part-of: tracker-etl
-    app.openshift.io/runtime: redis
+    app.openshift.io/runtime: python
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
   replicas: 1
