--- a/oc/prod/deployments/etl/downloaders/hi_physics_raw_prime0.yaml
+++ b/oc/prod/deployments/etl/downloaders/hi_physics_raw_prime0.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/component: hi-physics-raw-prime0-downloader-bulk
     app.kubernetes.io/instance: hi-physics-raw-prime0-downloader-bulk
     app.kubernetes.io/name: hi-physics-raw-prime0-downloader-bulk
-    app.kubernetes.io/part-of: downloader-etl
+    app.kubernetes.io/part-of: hi-physics-raw-prime0-downloader
     app.openshift.io/runtime: python
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
@@ -79,7 +79,7 @@ metadata:
     app.kubernetes.io/component: hi-physics-raw-prime0-downloader-priority
     app.kubernetes.io/instance: hi-physics-raw-prime0-downloader-priority
     app.kubernetes.io/name: hi-physics-raw-prime0-downloader-priority
-    app.kubernetes.io/part-of: downloader-etl
+    app.kubernetes.io/part-of: hi-physics-raw-prime0-downloader
     app.openshift.io/runtime: python
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
