--- a/oc/prod/deployments/etl/downloaders/muon0.yaml
+++ b/oc/prod/deployments/etl/downloaders/muon0.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/component: muon0-downloader-bulk
     app.kubernetes.io/instance: muon0-downloader-bulk
     app.kubernetes.io/name: muon0-downloader-bulk
-    app.kubernetes.io/part-of: downloader-etl
+    app.kubernetes.io/part-of: muon0-downloader
     app.openshift.io/runtime: python
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
@@ -79,7 +79,7 @@ metadata:
     app.kubernetes.io/component: muon0-downloader-priority
     app.kubernetes.io/instance: muon0-downloader-priority
     app.kubernetes.io/name: muon0-downloader-priority
-    app.kubernetes.io/part-of: downloader-etl
+    app.kubernetes.io/part-of: muon0-downloader
     app.openshift.io/runtime: python
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
