--- a/oc/prod/deployments/etl/downloaders/stream_express.yaml
+++ b/oc/prod/deployments/etl/downloaders/stream_express.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/component: stream-express-downloader-bulk
     app.kubernetes.io/instance: stream-express-downloader-bulk
     app.kubernetes.io/name: stream-express-downloader-bulk
-    app.kubernetes.io/part-of: downloader-etl
+    app.kubernetes.io/part-of: stream-express-downloader
     app.openshift.io/runtime: python
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
@@ -79,7 +79,7 @@ metadata:
     app.kubernetes.io/component: stream-express-downloader-priority
     app.kubernetes.io/instance: stream-express-downloader-priority
     app.kubernetes.io/name: stream-express-downloader-priority
-    app.kubernetes.io/part-of: downloader-etl
+    app.kubernetes.io/part-of: stream-express-downloader
     app.openshift.io/runtime: python
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
