--- a/oc/prod/deployments/etl/downloaders/zerobias.yaml
+++ b/oc/prod/deployments/etl/downloaders/zerobias.yaml
@@ -8,7 +8,7 @@ metadata:
     app.kubernetes.io/component: zerobias-downloader-bulk
     app.kubernetes.io/instance: zerobias-downloader-bulk
     app.kubernetes.io/name: zerobias-downloader-bulk
-    app.kubernetes.io/part-of: downloader-etl
+    app.kubernetes.io/part-of: zerobias-downloader
     app.openshift.io/runtime: python
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
@@ -79,7 +79,7 @@ metadata:
     app.kubernetes.io/component: zerobias-downloader-priority
     app.kubernetes.io/instance: zerobias-downloader-priority
     app.kubernetes.io/name: zerobias-downloader-priority
-    app.kubernetes.io/part-of: downloader-etl
+    app.kubernetes.io/part-of: zerobias-downloader
     app.openshift.io/runtime: python
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
