feat: replace EGamma dataset with EGamma0

--- a/etl/etl.config.json
+++ b/etl/etl.config.json
@@ -39,7 +39,7 @@
     {
       "name": "egamma",
       "primary_datasets": [
-        "EGamma"
+        "EGamma0"
       ],
       "me_startswith": [
         "Egamma/"
