--- a/oc/prod/deployments/etl/downloaders/egamma0.yaml
+++ b/oc/prod/deployments/etl/downloaders/egamma0.yaml
@@ -1,26 +1,26 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: egamma-downloader-bulk
+  name: egamma0-downloader-bulk
   namespace: cms-dials-prod
   labels:
-    app: egamma-downloader-bulk
-    app.kubernetes.io/component: egamma-downloader-bulk
-    app.kubernetes.io/instance: egamma-downloader-bulk
-    app.kubernetes.io/name: egamma-downloader-bulk
-    app.kubernetes.io/part-of: egamma-downloader
+    app: egamma0-downloader-bulk
+    app.kubernetes.io/component: egamma0-downloader-bulk
+    app.kubernetes.io/instance: egamma0-downloader-bulk
+    app.kubernetes.io/name: egamma0-downloader-bulk
+    app.kubernetes.io/part-of: egamma0-downloader
     app.openshift.io/runtime: python
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: egamma-downloader-bulk
+      app: egamma0-downloader-bulk
   template:
     metadata:
       labels:
-        app: egamma-downloader-bulk
-        deployment: egamma-downloader-bulk
+        app: egamma0-downloader-bulk
+        deployment: egamma0-downloader-bulk
       annotations:
         eos.okd.cern.ch/mount-eos-with-credentials-from-secret: eos-credentials
     spec:
@@ -29,7 +29,7 @@ spec:
           persistentVolumeClaim:
             claimName: eos-storage
       containers:
-        - name: egamma-downloader-bulk
+        - name: egamma0-downloader-bulk
           resources:
             requests:
               memory: 256Mi
@@ -40,8 +40,8 @@ spec:
             - '-c'
             - >-
               celery --app=python worker --loglevel=INFO --concurrency=1
-              --autoscale=1,0 --max-tasks-per-child=1 --hostname=EGamma-downloader-bulk@%h
-              --queues=EGamma-downloader-bulk
+              --autoscale=1,0 --max-tasks-per-child=1 --hostname=EGamma0-downloader-bulk@%h
+              --queues=EGamma0-downloader-bulk
           envFrom:
             - configMapRef:
                 name: dials-etl-configmap
@@ -72,26 +72,26 @@ spec:
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: egamma-downloader-priority
+  name: egamma0-downloader-priority
   namespace: cms-dials-prod
   labels:
-    app: egamma-downloader-priority
-    app.kubernetes.io/component: egamma-downloader-priority
-    app.kubernetes.io/instance: egamma-downloader-priority
-    app.kubernetes.io/name: egamma-downloader-priority
-    app.kubernetes.io/part-of: egamma-downloader
+    app: egamma0-downloader-priority
+    app.kubernetes.io/component: egamma0-downloader-priority
+    app.kubernetes.io/instance: egamma0-downloader-priority
+    app.kubernetes.io/name: egamma0-downloader-priority
+    app.kubernetes.io/part-of: egamma0-downloader
     app.openshift.io/runtime: python
     app.openshift.io/runtime-namespace: cms-dials-prod
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: egamma-downloader-priority
+      app: egamma0-downloader-priority
   template:
     metadata:
       labels:
-        app: egamma-downloader-priority
-        deployment: egamma-downloader-priority
+        app: egamma0-downloader-priority
+        deployment: egamma0-downloader-priority
       annotations:
         eos.okd.cern.ch/mount-eos-with-credentials-from-secret: eos-credentials
     spec:
@@ -100,7 +100,7 @@ spec:
           persistentVolumeClaim:
             claimName: eos-storage
       containers:
-        - name: egamma-downloader-priority
+        - name: egamma0-downloader-priority
           resources:
             requests:
               memory: 256Mi
@@ -111,8 +111,8 @@ spec:
             - '-c'
             - >-
               celery --app=python worker --loglevel=INFO --concurrency=1
-              --autoscale=1,0 --max-tasks-per-child=1 --hostname=EGamma-downloader-priority@%h
-              --queues=EGamma-downloader-priority
+              --autoscale=1,0 --max-tasks-per-child=1 --hostname=EGamma0-downloader-priority@%h
+              --queues=EGamma0-downloader-priority
           envFrom:
             - configMapRef:
                 name: dials-etl-configmap
