fix: add missing envs to OC secrets template file

--- a/oc/prod/secrets/backend.yaml
+++ b/oc/prod/secrets/backend.yaml
@@ -11,3 +11,7 @@ data:
   DJANGO_KEYCLOAK_CONFIDENTIAL_CLIENT_ID:
   DJANGO_KEYCLOAK_CONFIDENTIAL_SECRET_KEY:
   DJANGO_KEYCLOAK_API_CLIENTS:
+  DJANGO_OMS_SSO_CLIENT_ID:
+  DJANGO_OMS_SSO_CLIENT_SECRET:
+  DJANGO_KEYTAB_PWD:
+  DJANGO_KEYTAB_USR:
