fix: update prod secrets template file

--- a/oc/prod/secrets/redis.yaml
+++ b/oc/prod/secrets/redis.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: cms-dials-prod
 type: Opaque
 data:
-  REDIS_PASSWORD:
+  database-password:
 
 ---
 kind: Secret
@@ -15,4 +15,4 @@ metadata:
   namespace: cms-dials-prod
 type: Opaque
 data:
-  REDIS_PASSWORD:
+  database-password:
