chore: update etl secrets template

--- a/oc/prod/secrets/etl.yaml
+++ b/oc/prod/secrets/etl.yaml
@@ -11,7 +11,7 @@ data:
   DATABASE_URI:
   CERT_FPATH:
   KEY_FPATH:
-  MOUNTED_EOS_PATH:
+  RAW_LAYERS:
   FLOWER_BASIC_AUTH:
   ETL_CONFIG_FPATH:
   MODEL_REGISTRY_PATH:
