chore: update etl sample env files

--- a/etl/env.docker.sample
+++ b/etl/env.docker.sample
@@ -9,5 +9,5 @@ DATABASE_URI=postgresql://postgres:postgres@postgresql-local:5432
 CERT_FPATH=<PATH-TO-YOUR>/usercert.pem
 KEY_FPATH=<PATH-TO-YOUR>/userkey.pem
 ETL_CONFIG_FPATH=<PATH-TO-YOUR>/etl.config.json
-MOUNTED_EOS_PATH=<PATH-TO-YOUR>/mocks/DQMIO_for_DIALS_local_dev
+RAW_LAYERS=<PATH-TO-YOUR>/mocks/DQMIO_for_DIALS_local_dev, ...
 MOCKED_DBS_FPATH=<PATH-TO-YOUR>/mocks/dbs.json
