chore: replace react-bootstrap-table2 with BonnierNews fork
- This commit fix the issue #37 by updating `react-bootstrap-table-next` and `react-bootstrap-table2-paginator with BonnierNews fork that bumped many dependencies of the original abondoned repo.

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "react-ace": "^12.0.0",
     "react-bootstrap": "^2.10.0",
     "react-bootstrap-range-slider": "^3.0.8",
-    "react-bootstrap-table-next": "^4.0.3",
-    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table-next": "https://gitpkg.now.sh/BonnierNews/react-bootstrap-table2/packages/react-bootstrap-table2",
+    "react-bootstrap-table2-paginator": "https://gitpkg.now.sh/BonnierNews/react-bootstrap-table2/packages/react-bootstrap-table2-paginator",
     "react-dom": "^18.2.0",
     "react-oidc-context": "^3.0.0",
     "react-plotly.js": "^2.6.0",
